Bug 152267 - Double strike out changed to double underline in small zoom
Summary: Double strike out changed to double underline in small zoom
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2022-11-28 13:17 UTC by NISZ LibreOffice Team
Modified: 2022-12-11 04:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File for testing (5.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-28 13:18 UTC, NISZ LibreOffice Team
Details
Screenshot about the problem (7.26 KB, image/jpeg)
2022-11-28 13:20 UTC, NISZ LibreOffice Team
Details
This is the correct looks of it (4.71 KB, image/jpeg)
2022-11-28 13:22 UTC, NISZ LibreOffice Team
Details
The screenshots created from this file (6.55 KB, application/vnd.oasis.opendocument.text)
2022-11-28 13:23 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-28 13:17:57 UTC
Description:
Double strike changed to double underline in small zoom from
commit ba03e033d1be4bc49f2a8d6afbeecd381507b242
"vcl: Use font’s underline/strike position and size"
commit 55858a50cfb12cb6a4207bf906df676e799c1213
"tdf#152214: make sure underlines are shown on small zoom levels".

For example: bottom line of the double strikeout of 12 pt Liberation Serif on 87% zoom
are there on the baseline (bottom of the letters) and the upper one touch the full stop (baseline dot),
see the attached screenshot.

Steps to Reproduce:
1. See on the screenshots and the attached file too.

Actual Results:
The lines not in the correct location almost bottom of the letters.

Expected Results:
The lines are the center of the letters.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-28 13:18:47 UTC
Created attachment 183857 [details]
File for testing
Comment 2 NISZ LibreOffice Team 2022-11-28 13:20:40 UTC
Created attachment 183858 [details]
Screenshot about the problem
Comment 3 NISZ LibreOffice Team 2022-11-28 13:22:29 UTC
Created attachment 183859 [details]
This is the correct looks of it
Comment 4 NISZ LibreOffice Team 2022-11-28 13:23:22 UTC
Created attachment 183860 [details]
The screenshots created from this file
Comment 5 Khaled Hosny 2022-12-02 23:00:43 UTC
I tried to debug this and I believe it is a font bug, the strike through position is too low and on small scale and lo resolution it gets rounded too much that it becomes almost an underline (reported upstream https://github.com/liberationfonts/liberation-fonts/issues/58). It seems to also affect the regular font only, other style are fine.

The only fix I can think of right now is to ignore the font provided values and use the old calculations for this particular font.
Comment 6 Commit Notification 2022-12-10 21:22:41 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/840904c05f4799986d78033f05b4d38f58a59994

tdf#152267: Strike out changed to underline in small zoom

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-12-11 04:56:14 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/494d2e94b3c9cdf1ea527f21e6bc945fb03ea954

tdf#152267: Strike out changed to underline in small zoom

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.