tdf#152267: Strike out changed to underline in small zoom

The font has bogus value in the regular style. Add configuration
support for ignoring metrics of such fonts, similar to what we do with
line metrics.

Change-Id: Ia7cfb44400601e89b8425c9a1144f630f67569f4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143648
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>